--- a/client/assets/css/custom.css
+++ b/client/assets/css/custom.css
@@ -273,13 +273,20 @@ a:focus {
 }
 
 .project {
-    margin: 0 auto 50px auto;
-    width: 550px;
-    height: 300px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    width: 900px;
     padding: 50px;
     background-color: #Fff;
     color: #000;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.project_img {
+    width: 600px;
+    position: relative;
+    border: 3px black solid;
+    border-radius: 5px
 }
 
 @media(min-width:767px) {
