--- a/css/creative.css
+++ b/css/creative.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Creative Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 html,
 body {
     width: 100%;
@@ -482,4 +476,12 @@ body {
 
 .project {
     margin-bottom: 50px;
+}
+
+#profile_pic {
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+    border-radius: 100%;
+    border: 10px solid #F05F40;
 }
