--- a/css/creative.css
+++ b/css/creative.css
@@ -41,8 +41,9 @@ h6 {
 
 p {
     margin-bottom: 20px;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.5;
+    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
 }
 
 .bg-primary {
