--- a/css/creative.css
+++ b/css/creative.css
@@ -257,7 +257,7 @@ header .header-content .header-content-inner p {
     display: block;
     position: relative;
     margin: 0 auto;
-    max-width: 650px;
+    
 }
 
 .portfolio-box .portfolio-box-caption {
@@ -485,4 +485,12 @@ body {
     margin: 0 auto;
     border-radius: 100%;
     border: 10px solid #F05F40;
+}
+
+.modal-dialog {
+    margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  height: 100%;
 }
