--- a/css/creative.css
+++ b/css/creative.css
@@ -44,6 +44,7 @@ p {
     font-size: 18px;
     line-height: 1.5;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    text-align: center;
 }
 
 .bg-primary {
