Finishing up the modal display

--- a/css/creative.css
+++ b/css/creative.css
@@ -480,7 +480,7 @@ body {
     margin-bottom: 50px;
 }
 
-#profile_pic {
+.circular_pic {
     width: 250px;
     height: 250px;
     margin: 0 auto;
