--- a/css/creative.css
+++ b/css/creative.css
@@ -10,7 +10,7 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: #1ABC9C;
     border-width: 3px;
 }
 
@@ -19,7 +19,7 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #1ABC9C;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -27,7 +27,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #eb3812;
+    color: #138a72;
 }
 
 h1,
@@ -47,7 +47,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #1ABC9C;
 }
 
 .bg-dark {
@@ -84,12 +84,12 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;
+    color: #1ABC9C;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color: #138a72;
 }
 
 .navbar-default .nav > li>a,
@@ -102,12 +102,12 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: #1ABC9C;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #1ABC9C!important;
     background-color: transparent;
 }
 
@@ -148,12 +148,12 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: #1ABC9C;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #eb3812;
+        color: #138a72;
     }
 
     .navbar-default.affix .nav > li>a,
@@ -163,7 +163,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #1ABC9C;
     }
 }
 
@@ -258,7 +258,7 @@ header .header-content .header-content-inner p {
     display: block;
     position: relative;
     margin: 0 auto;
-    border: solid 5px #F05F40;
+    border: solid 5px #1ABC9C;
 }
 
 .portfolio-box .portfolio-box-caption {
@@ -270,7 +270,7 @@ header .header-content .header-content-inner p {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(240,95,64,.9);
+    background: rgba(22,160,133,.6);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -325,7 +325,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #1ABC9C;
 }
 
 .no-gutter > [class*=col-] {
@@ -387,9 +387,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #1ABC9C;
     color: #fff;
-    background-color: #f05f40;
+    background-color: #1ABC9C;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -401,9 +401,9 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-    border-color: #ed431f;
+    border-color: #1ABC9C;
     color: #fff;
-    background-color: #ee4b28;
+    background-color: #1ABC9C;
 }
 
 .btn-primary:active,
@@ -430,12 +430,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: #1ABC9C;
+    background-color: #1ABC9C;
 }
 
 .btn-primary .badge {
-    color: #f05f40;
+    color: #1ABC9C;
     background-color: #fff;
 }
 
@@ -492,7 +492,7 @@ body {
     height: 250px;
     margin: 0 auto;
     border-radius: 100%;
-    border: 10px solid #F05F40;
+    border: 10px solid #1ABC9C;
 }
 
 .modal-dialog {
